Soru listeleme arayüzü oluşturuldu. #27

--- a/kodusorClient/kodusorClient/Content/Site.css
+++ b/kodusorClient/kodusorClient/Content/Site.css
@@ -1,1 +1,4 @@
-﻿
+﻿.etiket {padding:5px; background-color:#90a4ae; color:#ffffff; border-radius:3px;}
+.soruBaslik {color:#455a64}
+.tarih{font:bold 10px verdana}
+.soranKul{font:bold 10px verdana; color:#b0bec5}
